Fix job scraping 500 error: handle ObjectId in schema, safe feature flag access, and Windows Playwright event loop

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -30,6 +30,7 @@
     "noUncheckedSideEffectImports": true,
     "noUncheckedIndexedAccess": true,
     "noImplicitReturns": true,
+    "forceConsistentCasingInFileNames": true,
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
