--- a/.gitignore
+++ b/.gitignore
@@ -30,11 +30,19 @@ coverage/
 .DS_Store
 Thumbs.db
 
+
 # Logs
 *.log
+*.log.*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Generated Content
+*.pdf
+*_output.txt
+debug_*.txt
+git_status*.txt
 
 # Testing
 .pytest_cache/
